agregue CSS a tickets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conf Bs As</title>
 
-    <link rel="shortcut icon" href="../images/codoacodo.png">
+    <link rel="shortcut icon" href="./images/codoacodo.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark navgrispad">
     <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="../images/codoacodo.png" width="100" height="60" class="d-inline-block align-center" alt="">
+      <img src="./images/codoacodo.png" width="100" height="60" class="d-inline-block align-center" alt="">
           Conf Bs As</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#">Conviértete en orador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btnnavverde" href="#">Comprar tickets</a>
+          <a class="nav-link btnnavverde" href="tickets.html">Comprar tickets</a>
         </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
       <h2 class="card-title">Conf Bs As</h2>
       <p class="card-text">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. ven a conocer a miembros del evento, a otros estudiantes de Codo a codo y a los oradores de primer nivel que tenemos para ti. ¡Te esperamos!</p>
       <a href="#" class="comprarticketsbtntransp">Quiero ser orador</a>
-      <a href="#" class="comprarticketsbtnverde">Comprar tickets</a>
+      <a href="tickets.html" class="comprarticketsbtnverde">Comprar tickets</a>
     </div>
   </div>
 
@@ -76,7 +76,7 @@
 
  <div class="col-md-4">
   <div class="card tarjetaorador">
-    <img src="../images/steve.jpg" class="card-img-top" alt="...">
+    <img src="./images/steve.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <span class="badge tarjetabtn tarjetabtnJS" disabled>JavaScript</span>
       <span class="badge tarjetabtn tarjetabtnReact" disabled>React</span>
@@ -88,7 +88,7 @@
 
  <div class="col-md-4">
    <div class="card tarjetaorador">
-    <img src="../images/bill.jpg" class="card-img-top" alt="...">
+    <img src="./images/bill.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <span class="badge tarjetabtn tarjetabtnJS" disabled>JavaScript</span>
       <span class="badge tarjetabtn tarjetabtnReact" disabled>React</span>
@@ -100,7 +100,7 @@
 
  <div class="col-md-4">
   <div class="card tarjetaorador">
-    <img src="../images/ada.jpeg" class="card-img-top" alt="...">
+    <img src="./images/ada.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
       <span class="badge tarjetabtn tarjetabtnNegocios">Negocios</span>
       <span class="badge tarjetabtn tarjetabtnST">Startups</span>
@@ -116,7 +116,7 @@
 <div class="card mb-3 descripcionBsAS" >
   <div class="row g-0">
     <div class="col-lg-6 col-sm-12 border">
-      <img src="../images/honolulu.jpg" class="img-fluid rounded-start" alt="" style="object-fit:cover;">
+      <img src="./images/honolulu.jpg" class="img-fluid rounded-start" alt="" style="object-fit:cover;">
     </div>
     <div class="col-lg-6 col-sm-12 border descripcionBsASright">
       <div class="card-body descripcionBsAStext">
