--- a/tickets.html
+++ b/tickets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conf Bs As</title>
 
-    <link rel="shortcut icon" href="../images/codoacodo.png">
+    <link rel="shortcut icon" href="./images/codoacodo.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -17,11 +17,11 @@
 
 <header>
 
-<div class="imageheader">
+<div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark navgrispad">
     <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="../images/codoacodo.png" width="100" height="60" class="d-inline-block align-center" alt="">
+      <img src="./images/codoacodo.png" width="100" height="60" class="d-inline-block align-center" alt="">
           Conf Bs As</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+          <a class="nav-link active" aria-current="page" href="index.html">La conferencia</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Los oradores</a>
@@ -48,16 +48,6 @@
       </div>
     </div>
   </nav>
-     
-  <div class="col-12 card text-end textheader">
-    
-    <div class="col-lg-6 col-md-7 col-sm-12 align-self-end card-body">
-      <h2 class="card-title">Conf Bs As</h2>
-      <p class="card-text">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. ven a conocer a miembros del evento, a otros estudiantes de Codo a codo y a los oradores de primer nivel que tenemos para ti. ¡Te esperamos!</p>
-      <a href="#" class="comprarticketsbtntransp">Quiero ser orador</a>
-      <a href="#" class="comprarticketsbtnverde">Comprar tickets</a>
-    </div>
-  </div>
 
 </div>
 
@@ -65,58 +55,100 @@
 
 <main>
 
-<div class="titulomain">
-  <p>VENTA</p>
-  <h1>VALOR DE TICKET $200</h1>
-</div>
+<div class="d-flex justify-content-center">
 
-
-<!-- <form class="row g-3 justify-content-center formularioorador"> -->
-<div class="row justify-content-center">
-  <div class="col-md-4 col-sm-6">
-    <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+<div class="row mt-4">
+  
+  <div class="col-md-4 g-1 ">
+    <div class="card text-center border-primary p-2 ">
+      <div class="card-body descuentocard">
+        <h4 class="card-title espaciolinea">Estudiante</h5>
+        <h6 class="card-subtitle mb-2 text-muted espaciolinea">Tienen un descuento</h6>
+        <h5 class="card-title espaciolinea">80%</h5>
+        <p class="card-text espaciolinea">* presentar documentación</p>
+      </div>
+    </div>
   </div>
-  <div class="col-md-4 col-sm-6">
-    <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
-  </div>
-</div>
-<div class="row justify-content-center">
-  <div class="col-md-8 col-sm-6">
-    <input type="email" class="form-control" placeholder="Correo Electrónico" aria-label="Nombre">
-  </div>
-</div>
-<div class="row justify-content-center">
-
-  <div class="col-md-4 col-sm-6">
-    <label for="text_cantidad"> Cantidad </label>
-    <input type="number" class="form-control" id="text_cantidad" placeholder="cantidad" aria-label="Apellido">
-  </div>
-  <div class="col-md-4 col-sm-6">
-    <label for="select_categoria"> Categoría </label>
-    <select class="form-control" id="select_categoria">
-      <option value="1">Estudiante</option>
-      <option value="2">Trainee</option>
-      <option value="3">Junior</option>
-    </select>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-sm-6">
-      <div class="alert alert-primary" role="alert">
-     Total a Pagar:$ <span id="totalapagar"></span>
+  
+  <div class="col-md-4 g-1">
+    <div class="card text-center border-success p-2">
+      <div class="card-body descuentocard">
+        <h4 class="card-title espaciolinea">Trainee</h5>
+        <h6 class="card-subtitle mb-2 text-muted espaciolinea">Tienen un descuento</h6>
+        <h5 class="card-title espaciolinea">50%</h5>
+        <p class="card-text espaciolinea">* presentar documentación</p>
       </div>
     </div>
   </div>
 
+  <div class="col-md-4 g-1">
+    <div class="card text-center border-warning p-2">
+      <div class="card-body descuentocard">
+        <h4 class="card-title espaciolinea">Junior</h5>
+        <h6 class="card-subtitle mb-2 text-muted espaciolinea">Tienen un descuento</h6>
+        <h5 class="card-title espaciolinea">15%</h5>
+        <p class="card-text espaciolinea">* presentar documentación</p>
+       </div>
+    </div>
+  </div>
+  
+  </div>
 </div>
-<div class="row justify-content-center">
-  <div class="col-md-4 d-grid gap-2">
-    <button class="btn enviarbtnform" type="submit" onclick="javascript:borrar();">Borrar</button>
-  </div>
-  <div class="col-md-4 d-grid gap-2">
-    <button class="btn enviarbtnform" type="submit" onclick="javascript:resumen();">Resumen</button>
-  </div>
 </div>
 
+<div class="titulomain">
+  <p>VENTA</p>
+  <h1 style="margin-bottom: 0.5rem !important;">VALOR DE TICKET $200</h1>
+</div>
+
+<div class="container formulariotickets">
+  <div class=" row justify-content-center mb-3">
+    <div class="col-md-4 col-sm-6">
+      <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+    </div>
+    <div class="col-md-4 col-sm-6">
+      <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
+    </div>
+  </div>
+  <div class="row justify-content-center mb-3">
+    <div class="col-md-8 col-sm-6">
+      <input type="email" class="form-control" placeholder="Correo Electrónico" aria-label="Nombre">
+  
+  </div>
+  </div>
+
+  <div class="row justify-content-center mb-3">
+
+    <div class="col-md-4 col-sm-6 mb-3">
+      <label for="text_cantidad" class="mb-2"> Cantidad </label>
+      <input type="number" class="form-control" id="text_cantidad" placeholder="cantidad" aria-label="Apellido">
+    </div>
+    <div class="col-md-4 col-sm-6 mb-4">
+      <label for="select_categoria" class="mb-2" > Categoría </label>
+      <select class="form-select" id="select_categoria">
+        <option value="1">Estudiante</option>
+        <option value="2">Trainee</option>
+        <option value="3">Junior</option>
+      </select>
+    </div>
+    <div class="row justify-content-center p-0">
+      <div class="col-md-8 col-sm-6">
+        <div class="alert alert-primary" role="alert">
+      Total a Pagar:$ <span id="totalapagar"></span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-4 d-grid gap-2">
+      <button class="btn enviarbtnform" type="submit" onclick="javascript:borrar();">Borrar</button>
+    </div>
+    <div class="col-md-4 d-grid gap-2">
+      <button class="btn enviarbtnform" type="submit" onclick="javascript:resumen();">Resumen</button>
+    </div>
+  </div>
+</div>
 <!-- </form> -->
 
 </main>
